work on design scopes

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -332,14 +332,11 @@ The imagined end users are students and staff in the Manchester Met Brooks build
 
 <!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
 
-The more immediate audience for the evolving games are peer game makers during the making sessions. In the vignette above, Toby begins the session playing his own game based on a shared template. During the session he invites many other group members to play his game. He initiates and responds to may conversations around the difficultly of the game he has designed.
-
-This scope of activity can be is continued in chapter six.
+The more immediate audience for the evolving games are peer game makers during the making sessions. In the vignette above, Toby begins the session playing his own game based on a shared template. During the session he invites many other group members to play his game. He initiates and responds to may conversations around the difficultly of the game he has designed. Analysis of this scope of activity is continued in chapter six.
 
 #### Mid-level objective - Implementing game elements
 
-The process of making a game was driven learners setting goals and requesting help to implement game features. This level of implementing
-The process can involves a diversity of tools and resources depending on the feature involved and the preferred approach of the learner. To help ground the reader, the following section describes this scope of the activity using the context of the above vignette.
+The process of making a game was driven learners setting goals and requesting help to implement game features. The process involved a diversity of tools and resources depending on the feature chosen and the preferred approach of the learner. To help ground the reader, the following section describes this scope of the activity using the context of the above vignette.
 
 <!-- | Subject         | Objective             | Tools & Processes          |
 |------|-------------|------------|
@@ -359,15 +356,20 @@ Table 4.x.  Tools used in mid-level objectives when selecting and planning imple
 <!-- NOTE - THIS IS ANALYSIS  -WHERE TO PLACE IT?
 By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. -->
 
-NOTE - how much from p1-4 below to include?
+<!-- NOTE - how much from p1-4 below to include? -->
+At this scope of activity, using the terminology of Engestrom in 3GAT, the object of the activity is the game code and the objective is to add a new feature to the game using the relevant tools.
 
-By this stage, a collection or menu of elements or design patterns (see chapter two and glossary) for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
+In the example above Toby progresses from playtesting his own game to altering it. The code to change the layout of the platforms of the game is already included in the starting template. Thus is able add a new platform by making simple code changes. Toby retests the game immediately by clicking on the preview element of the code environment.
 
-In the example above Toby progresses from playtesting his own game to altering it by adding a new platform to the game. Toby retests immediately by clicking on the preview element of the game. On this page participant can pick missions from a choice of resources.
+By this stage, a collection or menu of elements or design patterns (see chapter two and glossary) for the chosen game type of a platformer was in place. Toby browses the web page of a menu of game design patterns and selects moving enemies.
 
-Toby then browses the web page of a menu of game design patterns and selects moving enemies. At this scope of activity the goal is to increase the challenge and variety of the game experience. It appears probable that his is also guided by the expectations embodies in the page itself. EXPLAIN affordances OF DESIGN HERE.
+<!-- However within that wider objective there may be a variety of goals depending on the participant. In this case Toby's goal is addresses the challenge and variety of the game playing experience. -->
 
-Other participants were less proficient using this online resources and used printed out versions of documentation.
+While some game patterns were simple to add, e.g. altering the location of platforms, other more complicated features involved several stages and varied tools to implement. The next section describes key tools and processes.
+
+<!-- NOTE - Other participants;s motivations - explored later? -->
+
+<!-- Other participants were less proficient using this online resources and used printed out versions of documentation. -->
 
 <!-- In the next section narrower actions still within this system are explored as discreet actions which combine to be come the activity of implementing a game pattern. -->
 
@@ -384,13 +386,15 @@ Other participants were less proficient using this online resources and used pri
 
 #### Smaller objective / actions - Implementing discrete code and design structures
 
-While some game patterns were simple to add to to alter, other more complicated features involved several stages in implementation. For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element.
+<!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
 
-Some of these operations are performed by Toby quickly and fluently by Toby indicating that he has performed them many times. One example is the quick navigation between the different tools. However some are new to Toby and are performed more hesitantly. For example, Toby is careful in his checking of the process of copying and pasting new code to his game code.
+Toby undertakes some tasks fluently, for example his the quick navigation between different areas of the game code, the game preview window and  sources of documentation. However task some are new to Toby and are performed more hesitantly. In the example above Toby is careful is hesitant, checking and rechecking the process of copying and pasting new code into his game.
 
-In this example he is competent in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. He does not check the step by step tutorials which would provide more extensive, step-by-step help.   
+Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby was undertaking certain chains of processes in a fluid way that shows that actions had become operations. As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers.
 
-Others in the group did not experiment in this way and used more direct help or detailed written instructions.
+In this example, Toby could have used an additional resource, in the form of a online and printed tutorials provides more descriptive, step-by-step guidance. Instead he builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. Others in the group relied on the detailed written instructions. Others still relied only on direct verbal help from myself or other participants and for those participants the help of others like Toby to help them progress was most valuable.
+
+
 
 
 <!-- NOTE
@@ -404,24 +408,22 @@ This has utility to both researcher and learning designer. The observations of t
 NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich -->
 
 
-### Exploring game design patterns and germ cell of activity
+### Exploring game design patterns as germ cell of activity and unit of analysis
 
-**Scope of activity:** While other interpretations are possible which view the implementation of each pattern as a form of action with each activity system, I have chosen to privilege this as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process.
-
-<!-- Explore the dividing line  -->
-
-As explored in the previous chapter, Barab and colleagues, outline the value of a more granular approach to analysis of nested activity systems.
-
-
-NOTE - Proposed new location to first introduce this idea.  Evaluate
+For this research, I have chosen to privilege the implementation of each pattern as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process [@barab_using_2002].
 
 P1 working practices yielded new ways of working and resources. Key elements including working form a template, goal setting around implementing new features, some where held in common with other groups.
 
+The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work.
+
+<!-- Explore the dividing line  -->
+
 Explain - Unit of analysis for upcoming chapters.
 
-The small, quick start activities used to kick start activity  game makers were an evolution from  the full process of adding a game pattern. The proposed code modification instead of new code structures accelerated the process.
+The concept of germ cell is relevant here as the same germ of an idea yeilded varied forms of support.
+EXPLORE THIS LATER IN THE CHAPTER???
 
-The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work.
+The small, quick start activities used to kick start activity game makers were an evolution from the full process of adding a game pattern. The proposed code modification instead of new code structures accelerated the process.
 
 
 **Transition**
@@ -430,10 +432,7 @@ It is useful to researchers to highlight possible tensions and contradictions be
 
 For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills
 
-
 As a starting point - a description of phases.
-
-
 
 
 ## Summary of design evolution
