shifted germ cell to next chapter

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -8,7 +8,6 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -16,24 +15,17 @@ title: 4. Exploration of the Formative Learning Design Process
     research](#exploring-issues-and-context-from-practitioner-interviews-and-existing-research)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
-    -   [Outline of Game Making Tools used in this vignette - ANY SPACE
-        IN LIT
-        REVIEW?](#outline-of-game-making-tools-used-in-this-vignette---any-space-in-lit-review)
-        -   [Code Playgrounds](#code-playgrounds)
-        -   [Online graphics editors -
-            Piskel](#online-graphics-editors---piskel)
     -   [Context of Vignette](#context-of-vignette)
--   [Description of the nested levels of activity & tools used - CHANGE
-    TO MOSTLY SIGN POSTING - EDIT
-    DOWN](#description-of-the-nested-levels-of-activity-tools-used---change-to-mostly-sign-posting---edit-down)
-    -   [Environmental Factors and
-        Objectives](#environmental-factors-and-objectives)
-    -   [Shared larger objective - Making games for an
-        audience](#shared-larger-objective---making-games-for-an-audience)
-    -   [Smaller objective - Implementing game
-        elements](#smaller-objective---implementing-game-elements)
-    -   [Exploring game design patterns and germ cell of
-        activity](#exploring-game-design-patterns-and-germ-cell-of-activity)
+    -   [Commentary on Vignette](#commentary-on-vignette)
+        -   [Environmental factors and
+            objectives](#environmental-factors-and-objectives)
+        -   [Larger objective - Making games for an
+            audience](#larger-objective---making-games-for-an-audience)
+        -   [Mid-level objective - Implementing game
+            elements](#mid-level-objective---implementing-game-elements)
+        -   [Smaller objective / actions - Implementing discrete code
+            and design
+            structures](#smaller-objective-actions---implementing-discrete-code-and-design-structures)
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
@@ -99,8 +91,8 @@ title: 4. Exploration of the Formative Learning Design Process
         process.](#discussion-on-the-emergent-and-mutual-nature-of-the-design-and-research-process.)
     -   [Analysis in relation to existing research on related design
         toolsets](#analysis-in-relation-to-existing-research-on-related-design-toolsets)
-        -   [Comparing to Scratch and
-            Microworlds](#comparing-to-scratch-and-microworlds)
+        -   [Comparing design to Scratch and
+            Microworlds](#comparing-design-to-scratch-and-microworlds)
         -   [Authentic tool use and instrumental
             agency](#authentic-tool-use-and-instrumental-agency)
     -   [Link to next chapter](#link-to-next-chapter)
@@ -336,7 +328,8 @@ The more immediate audience for the evolving games are peer game makers during t
 
 #### Mid-level objective - Implementing game elements
 
-The process of making a game was driven learners setting goals and requesting help to implement game features. The process involved a diversity of tools and resources depending on the feature chosen and the preferred approach of the learner. To help ground the reader, the following section describes this scope of the activity using the context of the above vignette.
+
+The process of making a game was driven learners setting goals and requesting help to implement game features. The process involved a diversity of tools and resources depending on the feature chosen and the preferred approach of the learner. For this research, I have chosen to privilege the implementation of each pattern as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process [@barab_using_2002]. To help ground the reader, the following section describes this scope of the activity using the context of the above vignette.
 
 <!-- | Subject         | Objective             | Tools & Processes          |
 |------|-------------|------------|
@@ -406,25 +399,6 @@ Break down that of GDPs? -->
 This has utility to both researcher and learning designer. The observations of the following chapters are based on this approach of using lenses to focus in on relevant activity.
 
 NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich -->
-
-
-### Exploring game design patterns as germ cell of activity and unit of analysis
-
-For this research, I have chosen to privilege the implementation of each pattern as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process [@barab_using_2002].
-
-P1 working practices yielded new ways of working and resources. Key elements including working form a template, goal setting around implementing new features, some where held in common with other groups.
-
-The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work.
-
-<!-- Explore the dividing line  -->
-
-Explain - Unit of analysis for upcoming chapters.
-
-The concept of germ cell is relevant here as the same germ of an idea yeilded varied forms of support.
-EXPLORE THIS LATER IN THE CHAPTER???
-
-The small, quick start activities used to kick start activity game makers were an evolution from the full process of adding a game pattern. The proposed code modification instead of new code structures accelerated the process.
-
 
 **Transition**
 
