--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -6,17 +6,16 @@
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
     -   [Context of Vignette](#context-of-vignette)
--   [Description of the nested levels of activity & tools used - CHANGE
-    TO MOSTLY SIGN POSTING - EDIT
-    DOWN](#description-of-the-nested-levels-of-activity-tools-used---change-to-mostly-sign-posting---edit-down)
-    -   [Environmental Factors and
-        Objectives](#environmental-factors-and-objectives)
-    -   [Shared larger objective - Making games for an
-        audience](#shared-larger-objective---making-games-for-an-audience)
-    -   [Smaller objective - Implementing game
-        elements](#smaller-objective---implementing-game-elements)
-    -   [Exploring game design patterns and germ cell of
-        activity](#exploring-game-design-patterns-and-germ-cell-of-activity)
+    -   [Commentary on Vignette](#commentary-on-vignette)
+        -   [Environmental factors and
+            objectives](#environmental-factors-and-objectives)
+        -   [Larger objective - Making games for an
+            audience](#larger-objective---making-games-for-an-audience)
+        -   [Mid-level objective - Implementing game
+            elements](#mid-level-objective---implementing-game-elements)
+        -   [Smaller objective / actions - Implementing discrete code
+            and design
+            structures](#smaller-objective-actions---implementing-discrete-code-and-design-structures)
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
