--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -9,9 +9,17 @@ layout: post
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
-
--   [Introduction to This Writing](#introduction-to-this-writing)
--   [Chapter introduction](#chapter-introduction)
+-   [Chapter introduction and place in the
+    thesis](#chapter-introduction-and-place-in-the-thesis)
+    -   [Chapter outline](#chapter-outline)
+-   [Re-examing design patterns in this
+    context](#re-examing-design-patterns-in-this-context)
+    -   [On GDP as a Germ cell and unit of
+        Analysis](#on-gdp-as-a-germ-cell-and-unit-of-analysis)
+        -   [On GDPs as a germ concept to help
+            development](#on-gdps-as-a-germ-concept-to-help-development)
+        -   [On GDPs as a concept to help
+            analysis](#on-gdps-as-a-concept-to-help-analysis)
 -   [Study of Vignette A](#study-of-vignette-a)
     -   [Descriptive Commentary on Vignette
         A](#descriptive-commentary-on-vignette-a)
@@ -33,6 +41,8 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
             documentation](#gdps-helping-navigation-of-external-documentation)
         -   [Code patching process using GDPs as a
             base](#code-patching-process-using-gdps-as-a-base)
+        -   [GDPs used to nurture tactical responses to errors and
+            blockages](#gdps-used-to-nurture-tactical-responses-to-errors-and-blockages)
     -   [GDPs used to scaffold ideation
         processes](#gdps-used-to-scaffold-ideation-processes)
         -   [GDPs used to facilitate prioritisation in the design
@@ -45,6 +55,8 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
         processes](#gdp-driving-adoption-of-emerging-technical-processes)
         -   [Other examples of GDP driving adoption of technical
             processes](#other-examples-of-gdp-driving-adoption-of-technical-processes)
+    -   [Repeated implementations of GDP developing fluency of coding
+        practices](#repeated-implementations-of-gdp-developing-fluency-of-coding-practices)
     -   [Use of GDPs to support debugging and the product revision
         process - EDIT DOWN AND
         MOVE](#use-of-gdps-to-support-debugging-and-the-product-revision-process---edit-down-and-move)
@@ -64,7 +76,6 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
             designers](#implications-for-facilitators-and-designers)
     -   [Discussion on GDPs, emerging processes and learner
         agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
-
 
 
 
@@ -131,8 +142,6 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-
-
 ## Re-examing design patterns in this context
 
 Recap on the value of design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].
@@ -140,6 +149,11 @@ Recap on the value of design patterns in learning design which exist at differen
 How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
 
 ### On GDP as a Germ cell and unit of Analysis
+
+
+
+<!-- Explore the dividing line  -->
+
 
 Both concepts are similar but different focus.
 
@@ -154,7 +168,21 @@ The theoretical framework invites discussion on what is the germ cell of the ove
 
 While this concept is more typically used in a larger scope of societal activity, the principles apply this smaller scope. The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
 
+The concept of germ cell is relevant here as the same germ of an idea yeilded varied forms of support.
+
+
+P1 working practices yielded new ways of working and resources. Key elements including working form a template, goal setting around implementing new features, some where held in common with other groups.
+
+The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work.
+
+
+The small, quick start activities used to kick start activity game makers were an evolution from the full process of adding a game pattern. The proposed code modification instead of new code structures accelerated the process.
+
+
 For example, in the last chapter I described how the smaller quick changes could provide a scaffolded process to help participants engage with game making, the process of which was an adaptation of the foundational activity of deciding on and implementing gameplay design patterns.
+
+
+
 
 
 #### On GDPs as a concept to help analysis
