--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -260,14 +260,10 @@ Screen shot of the menu of choices. -->
 
 <!--
 #### Code Playgrounds
-
 Find definition
-
 NOTES ON CODE PLAYGROUNDS
 However in its styling it is playful and editorial picks and write up celebrate a playful spirit of creativity and sharing. There are strong parallels in this presentation to that Scratch community and to the sharing ethos integral to the maker-movement (explored in Lit Review). The interplay between play and work via shared experimentation is developed further in a later discussion chapter.
-
 #### Online graphics editors - Piskel -->
-
 
 
 ### Context of  Vignette
@@ -381,13 +377,17 @@ While some game patterns were simple to add, e.g. altering the location of platf
 
 <!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
 
-Toby undertakes some tasks fluently, for example his the quick navigation between different areas of the game code, the game preview window and  sources of documentation. However task some are new to Toby and are performed more hesitantly. In the example above Toby is careful is hesitant, checking and rechecking the process of copying and pasting new code into his game.
+Toby undertakes some tasks fluently, for example his the quick navigation between different areas of the game code, the game preview window and  sources of documentation. Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby was undertaking certain chains of processes in a fluid way that shows that actions had become operations. As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers.
 
-Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby was undertaking certain chains of processes in a fluid way that shows that actions had become operations. As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers.
+In contrast, some tasks are new to Toby and are performed more hesitantly. In the example above Toby is careful is hesitant, checking and rechecking the process of copying and pasting new code into his game from a specially prepared code example which matches the game template he is working on. After inserting the code which adds a moving enemy to the game, Toby spends five minutes altering the variables involved to match his design and to create a level of challenge that he is happy with.
 
-In this example, Toby could have used an additional resource, in the form of a online and printed tutorials provides more descriptive, step-by-step guidance. Instead he builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. Others in the group relied on the detailed written instructions. Others still relied only on direct verbal help from myself or other participants and for those participants the help of others like Toby to help them progress was most valuable.
+Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. In this example, Toby could, as others in the group were doing in this session, have used an additional resource, in the form of a online and printed tutorials provides more descriptive, step-by-step guidance. Others participants relied only on direct verbal help from myself or other participants and for those participants the help of others like Toby to help them progress was most valuable.
 
+Toby makes quick progress. one factor here is willingness to make mistakes. There is a confidence here in undoing mistakes, commenting out new code to return to previous behaviour.
 
+The trial and error approach also yields benefits, a mistake in the values edited creates an unexpected result of the enemy moving vertically instead of horizontally. Toby embraces this mistake and shares his account of this happy accident enthusiastically.
+
+The trajectory we see for Toby shows one example of the shift between to the wide activity of making a game and sharing it with peers to the narrower action on implementing a concrete code structure.
 
 
 <!-- NOTE
@@ -400,13 +400,20 @@ This has utility to both researcher and learning designer. The observations of t
 
 NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich -->
 
-**Transition**
+### Using scopes of activity as a tool for analysis.
 
-It is useful to researchers to highlight possible tensions and contradictions between competing goals of interrelated activity systems.
+NOTE - explain why the above is useful / relevant
 
-For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills
+The structure of the following chapters broadly mirrors the three main scopes of activity described above. The first concern cultural aspects of making a game together in a group of learners and is explored in chapter six. The second addresses the repeated process of altering or adding new game design patterns to the game and is explored in chapter five. Finally, the use of coding and creative tools to undertake the discrete specific actions and operations which make up whole is explored, in part, in this chapter.
 
-As a starting point - a description of phases.
+To do this the next section concisely charts emerging tensions in activity through a description of the evolution of tool use in the phases of the study.
+
+Later larger contradictions of different scope are signposted and one key contradiction in tool use is analysed in more depth.
+
+<!-- to highlight possible tensions and contradictions between competing goals of interrelated activity systems. -->
+
+<!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
+
 
 
 ## Summary of design evolution
