working on phases

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -443,7 +443,14 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
 
-Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my own background knowledge and competency as a facilitator.
+Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code framework of a platform game and created various code examples to add functionality requested by participants. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
+Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful. Extracts of feedback notes are included as appendix 4.x
+
+The end of this phase in summer 2018 involved responding to this feedback and working together with PGCE computing students and delivery three one-off workshops at conferences. The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process.
+
+The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences.
+
+
 
 <!-- The first phase of delivery in late 2018 was based on initial research stage; I drew on literature to identify factors to consider when designing for collaboration, adopting a project based approach inspired by design thinking.  -->
 <!-- To inculcate parents and children in to the culture of retro video games I began initial sessions by inviting participants to older arcade games on laptops. -->
@@ -453,18 +460,6 @@ Should this be added to the table above
 <!-- The tools allow participants to create games using a combination of a free to use online tools.
 an online  coding environment
 using the phaser javascript game library (glitch.com), a pixel art editor (piskelapp.com), and a sound effect generator (sfbgames.com/chiptone). -->
-
-In terms of supporting resources, stage one was responsive; I had no pre-existing supporting materials and created a starting code framework of a platform game and code examples to add extra functionality to the game as the programme developed.
-
-A final public showcase - At the end of this stage participants showed their games to students in the foyer of the MMU Brooks building and gave me feedback on their participation in the programme. Feedback notes are included as appendix 4.x
-
-Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful.
-
-Other emerging tensions and participant conflicts are explored in the next section of this chapter. Phase two comprised one-off workshops at summer conferences and to PGCE computing students.
-
-The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process.
-
-The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences.
 
 <!-- Have a look at this document which outlines Structuring and Scaffolding Phaser Activities from Phaser Book
 https://docs.google.com/document/d/1lk-8dHFFNbFXFtE5vV6_GHXYRzU7ATWZAIe-hNunyx8/edit#
