--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -446,9 +446,7 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code framework of a platform game and created various code examples to add functionality requested by participants. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
 Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful. Extracts of feedback notes are included as appendix 4.x
 
-The end of this phase in summer 2018 involved responding to this feedback and working together with PGCE computing students and delivery three one-off workshops at conferences. The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process.
-
-The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences.
+The end of this phase in mid to late 2018 involved responding to this feedback and working together with PGCE computing students and delivery three one-off workshops at conferences. The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process. The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences.
 
 
 
@@ -522,7 +520,9 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
 
 ### P2: The game making using suggested patterns.
 
-By P3 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the supporting resources that stemmed from participant feedback and detailed reading of relevant literature.
+By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the supporting resources that stemmed from participant feedback and detailed reading of relevant literature.
+
+OUTLINE RESOURCES USED AT THIS STAGE CLEARLY AT SOME POINT IN THIS CHAPTER. 
 
 One key addition brought to start of P3 was a more coherent list of tutorials and code examples illustrating key game features that had been requested by participants. These were presented in a web page together with the starting template as a collection of game design patterns.
 
