--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -443,11 +443,9 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
 
-Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code framework of a platform game and created various code examples to add functionality requested by participants. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building.
-Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful. Extracts of feedback notes are included as appendix 4.x
+Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code framework of a platform game and created various code examples to add functionality requested by participants. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful. Extracts of feedback notes are included as appendix 4.x
 
-The end of this phase in mid to late 2018 involved responding to this feedback and working together with PGCE computing students and delivery three one-off workshops at conferences. The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process. The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences.
-
+The end of this phase in mid to late 2018 involved responding to this feedback and working together with PGCE computing students and delivery three one-off workshops at conferences and a Manchester library fun day. The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process. The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences. The results in terms of engagement and impact on changing the game were very promising.
 
 
 <!-- The first phase of delivery in late 2018 was based on initial research stage; I drew on literature to identify factors to consider when designing for collaboration, adopting a project based approach inspired by design thinking.  -->
@@ -522,20 +520,25 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
 
 By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the supporting resources that stemmed from participant feedback and detailed reading of relevant literature.
 
-OUTLINE RESOURCES USED AT THIS STAGE CLEARLY AT SOME POINT IN THIS CHAPTER. 
+OUTLINE RESOURCES USED AT THIS STAGE CLEARLY AT SOME POINT IN THIS CHAPTER.
 
-One key addition brought to start of P3 was a more coherent list of tutorials and code examples illustrating key game features that had been requested by participants. These were presented in a web page together with the starting template as a collection of game design patterns.
+One key addition brought to start of P3 was a more coherent list of tutorials and code examples illustrating key game features that had been requested by participants, as outline above. The collection of game patterns were presented in a web page together with the starting template and a link to an online book collecting the process into step-by-step chapter based tutorials.
 
-### P3 adding a process drama
+### P3: Adding a process drama
+
 P3 used the same toolset as P2 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens.
 
 The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
 
 ### P4: Adapting to MakeCode Arcade and more formal settings
 
-I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P2.
+I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter.
 
-I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map. This is explored in a later section of this chapter.
+In 2019 MakeCode Arcade was launched to make games using a shared authoring system to Microbit controller. As that systems was designed to be easy to use by novices
+
+I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P2 [^2].
+
+I also adapted resources to include
 
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
@@ -1335,14 +1338,9 @@ https://docs.google.com/spreadsheets/d/1EvMehUNHIGj0xRyrKgBxj5GwOGHwnTFw9EMBJ3Ot
 
 
 
-
-
-
 <!-- Due to the complexity and many moving parts of the design it has been mostly descriptive. -->
 
 <!-- While CHAT provides the technique of highlighting emerging tensions and resolutions, to undertake deeper analysis I will an analytical process proposed by Rogoff which examines learning communities using 3 foci. -->
-
-
 
 
 <!--
@@ -1354,3 +1352,8 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^1]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
 [^3]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics -->
+
+
+[^1]: https://network23.org/3m-gamemaking/an-overview-of-game-coding-tools/
+[^2]: https://mickfuzz.github.io/makecode-platformer-101/
+[^3]: https://glitch-game-makers-manual.glitch.me/
