--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -16,6 +16,8 @@
         -   [Smaller objective / actions - Implementing discrete code
             and design
             structures](#smaller-objective-actions---implementing-discrete-code-and-design-structures)
+    -   [Using scopes of activity as a tool for
+        analysis.](#using-scopes-of-activity-as-a-tool-for-analysis.)
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
@@ -23,56 +25,49 @@
         innovations](#p1-explorations-and-innovations)
     -   [P2: The game making using suggested
         patterns.](#p2-the-game-making-using-suggested-patterns.)
-    -   [P3 adding a process drama](#p3-adding-a-process-drama)
+    -   [P3: Adding a process drama](#p3-adding-a-process-drama)
     -   [P4: Adapting to MakeCode Arcade and more formal
         settings](#p4-adapting-to-makecode-arcade-and-more-formal-settings)
 -   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Design tensions experienced as a researcher / designer - HOW
-        MUCH TO REFOCUS ON LARGER CONFLICTS - REDUCE THIS DOWN - CHECK
-        THE FOCUS AND NEED FOR THIS
-        SECTION?](#design-tensions-experienced-as-a-researcher-designer---how-much-to-refocus-on-larger-conflicts---reduce-this-down---check-the-focus-and-need-for-this-section)
-        -   [My analysis and concerns around authenticity in choice of
-            toolset](#my-analysis-and-concerns-around-authenticity-in-choice-of-toolset)
--   [Participant conflicts /
-    contractions](#participant-conflicts-contractions)
--   [1. Identity hardcore coding & dysfunctional group work - P1 -
-    COMPRESS AND
-    SIGNPOST](#identity-hardcore-coding-dysfunctional-group-work---p1---compress-and-signpost)
--   [2. Participant conflict due to lack of relevant technical
-    support](#participant-conflict-due-to-lack-of-relevant-technical-support)
-    -   [Notes on structure of this
-        section](#notes-on-structure-of-this-section)
-        -   [- REWRITE TO FIT IN THIS SECTION The impact of the core
-            tools of code playgrounds and templated
-            game](#rewrite-to-fit-in-this-section-the-impact-of-the-core-tools-of-code-playgrounds-and-templated-game)
-    -   [Code playground](#code-playground)
-    -   [Design and observations on the use of the half-baked game
-        template](#design-and-observations-on-the-use-of-the-half-baked-game-template)
-        -   [Design behaviours encouraged through use of game
-            template](#design-behaviours-encouraged-through-use-of-game-template)
-        -   [Observations on design behaviours encouraged through use of
-            game
-            template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
-    -   [Discussion on Authenticity of
-        Tools](#discussion-on-authenticity-of-tools)
-        -   [Discussion on Authenticity within this conflict and
-            playground as
-            resolution](#discussion-on-authenticity-within-this-conflict-and-playground-as-resolution)
-    -   [ORIGINAL SECTION](#original-section)
-        -   [Tensions and related to navigation of various
-            documentations
-            sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
-    -   [3. Facilitator conflict addressing the Play
-        Paradox](#facilitator-conflict-addressing-the-play-paradox)
-        -   [Using Physical Maps of Missions as Game Design Patterns -
-            COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
+-   [1. Identity hardcore coding & dysfunctional group
+    work](#identity-hardcore-coding-dysfunctional-group-work)
+-   [4. Facilitator conflict addressing the Play
+    Paradox](#facilitator-conflict-addressing-the-play-paradox)
+    -   [Using Physical Maps of Missions as Game Design Patterns -
+        COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
         -   [Learning Dimensions Map](#learning-dimensions-map)
         -   [NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO
             ADDRESS](#notes-on-tensions-which-this-learning-map-has-potential-to-address)
         -   [Resolving the conflict by minimising elements in an
             informal
             setting](#resolving-the-conflict-by-minimising-elements-in-an-informal-setting)
+-   [3. Participant conflict due to lack of access to
+    tools](#participant-conflict-due-to-lack-of-access-to-tools)
+    -   [Tensions between authenticity in choice of toolset and user
+        progress](#tensions-between-authenticity-in-choice-of-toolset-and-user-progress)
+        -   [Observations around authenticity in choice of
+            toolset](#observations-around-authenticity-in-choice-of-toolset)
+    -   [Discussion on Authenticity of
+        Tools](#discussion-on-authenticity-of-tools)
+        -   [Discussion on Authenticity within this conflict and
+            playground as
+            resolution](#discussion-on-authenticity-within-this-conflict-and-playground-as-resolution)
+    -   [Design choices of the half-baked
+        template](#design-choices-of-the-half-baked-template)
+-   [4. Participant conflict due to lack of relevant technical
+    support](#participant-conflict-due-to-lack-of-relevant-technical-support)
+    -   [Tensions and related to navigation of various documentations
+        sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
+-   [The impact of the core tools of code playgrounds and templated
+    game](#the-impact-of-the-core-tools-of-code-playgrounds-and-templated-game)
+    -   [Observations on the impact of the half-baked game
+        template](#observations-on-the-impact-of-the-half-baked-game-template)
+        -   [Design behaviours encouraged through use of game
+            template](#design-behaviours-encouraged-through-use-of-game-template)
+        -   [Observations on design behaviours encouraged through use of
+            game
+            template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
 -   [Conclusion](#conclusion)
     -   [Summary of barriers exposed in this study
         -](#summary-of-barriers-exposed-in-this-study--)
