--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -32,7 +32,7 @@
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
 -   [1. Identity hardcore coding & dysfunctional group
     work](#identity-hardcore-coding-dysfunctional-group-work)
--   [4. Facilitator conflict addressing the Play
+-   [2. Facilitator conflict addressing the Play
     Paradox](#facilitator-conflict-addressing-the-play-paradox)
     -   [Using Physical Maps of Missions as Game Design Patterns -
         COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
@@ -46,21 +46,14 @@
     tools](#participant-conflict-due-to-lack-of-access-to-tools)
     -   [Tensions between authenticity in choice of toolset and user
         progress](#tensions-between-authenticity-in-choice-of-toolset-and-user-progress)
-        -   [Observations around authenticity in choice of
-            toolset](#observations-around-authenticity-in-choice-of-toolset)
-    -   [Discussion on Authenticity of
-        Tools](#discussion-on-authenticity-of-tools)
-        -   [Discussion on Authenticity within this conflict and
-            playground as
-            resolution](#discussion-on-authenticity-within-this-conflict-and-playground-as-resolution)
+    -   [Impact of use of code
+        playground](#impact-of-use-of-code-playground)
+        -   [Addressing complexity of code environment with code
+            playground](#addressing-complexity-of-code-environment-with-code-playground)
     -   [Design choices of the half-baked
         template](#design-choices-of-the-half-baked-template)
--   [4. Participant conflict due to lack of relevant technical
-    support](#participant-conflict-due-to-lack-of-relevant-technical-support)
-    -   [Tensions and related to navigation of various documentations
-        sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
--   [The impact of the core tools of code playgrounds and templated
-    game](#the-impact-of-the-core-tools-of-code-playgrounds-and-templated-game)
+        -   [Addressing barriers with
+            template](#addressing-barriers-with-template)
     -   [Observations on the impact of the half-baked game
         template](#observations-on-the-impact-of-the-half-baked-game-template)
         -   [Design behaviours encouraged through use of game
@@ -68,6 +61,12 @@
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
+    -   [Discussion on Authenticity of
+        Tools](#discussion-on-authenticity-of-tools)
+-   [4. Participant conflict due to lack of relevant technical
+    support](#participant-conflict-due-to-lack-of-relevant-technical-support)
+    -   [Tensions and related to navigation of various documentations
+        sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
 -   [Conclusion](#conclusion)
     -   [Summary of barriers exposed in this study
         -](#summary-of-barriers-exposed-in-this-study--)
