--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -8,7 +8,6 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -43,7 +42,7 @@ title: 4. Exploration of the Formative Learning Design Process
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
 -   [1. Identity hardcore coding & dysfunctional group
     work](#identity-hardcore-coding-dysfunctional-group-work)
--   [4. Facilitator conflict addressing the Play
+-   [2. Facilitator conflict addressing the Play
     Paradox](#facilitator-conflict-addressing-the-play-paradox)
     -   [Using Physical Maps of Missions as Game Design Patterns -
         COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
@@ -57,21 +56,14 @@ title: 4. Exploration of the Formative Learning Design Process
     tools](#participant-conflict-due-to-lack-of-access-to-tools)
     -   [Tensions between authenticity in choice of toolset and user
         progress](#tensions-between-authenticity-in-choice-of-toolset-and-user-progress)
-        -   [Observations around authenticity in choice of
-            toolset](#observations-around-authenticity-in-choice-of-toolset)
-    -   [Discussion on Authenticity of
-        Tools](#discussion-on-authenticity-of-tools)
-        -   [Discussion on Authenticity within this conflict and
-            playground as
-            resolution](#discussion-on-authenticity-within-this-conflict-and-playground-as-resolution)
+    -   [Impact of use of code
+        playground](#impact-of-use-of-code-playground)
+        -   [Addressing complexity of code environment with code
+            playground](#addressing-complexity-of-code-environment-with-code-playground)
     -   [Design choices of the half-baked
         template](#design-choices-of-the-half-baked-template)
--   [4. Participant conflict due to lack of relevant technical
-    support](#participant-conflict-due-to-lack-of-relevant-technical-support)
-    -   [Tensions and related to navigation of various documentations
-        sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
--   [The impact of the core tools of code playgrounds and templated
-    game](#the-impact-of-the-core-tools-of-code-playgrounds-and-templated-game)
+        -   [Addressing barriers with
+            template](#addressing-barriers-with-template)
     -   [Observations on the impact of the half-baked game
         template](#observations-on-the-impact-of-the-half-baked-game-template)
         -   [Design behaviours encouraged through use of game
@@ -79,6 +71,12 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [Observations on design behaviours encouraged through use of
             game
             template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
+    -   [Discussion on Authenticity of
+        Tools](#discussion-on-authenticity-of-tools)
+-   [4. Participant conflict due to lack of relevant technical
+    support](#participant-conflict-due-to-lack-of-relevant-technical-support)
+    -   [Tensions and related to navigation of various documentations
+        sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
 -   [Conclusion](#conclusion)
     -   [Summary of barriers exposed in this study
         -](#summary-of-barriers-exposed-in-this-study--)
@@ -786,33 +784,23 @@ While tensions between lack of knowledge in how to undertake activities are comm
 
 Dimensions of authenticity are explored in the literature review. NOTE INCLUDE SUMMARY
 
+  - similar to workplace
+  - has a real purpose for Participants
+  - can be showcased in public for an external audience
+
 While the digital focus of the activity allowed for a high level of authenticity in the sense of aligning with professional practice, due to the potentially prohibitive complexity of tools, I took care to screen participants from processes and tools that were unrealistic for novices to use.
 
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
 
 My motivation for choice of code language (Javascript, Phaser) was driven by desire to be authentic and extensible. The use of glitch.com as a code playground significantly reduced technical barriers for students related to this choice. In terms of first impressions, learners first experience of the experience was in the process of playing a game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process.
 
+### Impact of use of code playground
 
-**Other tools and authenticity of Microworld**
-
-Research on other toolsets is instructive on this tension.
-
-The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
-
-While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
-
-- Why not Scratch
-- Choice of Thimble initially
-- lack of mature community
-
-NOTE - RETURN TO THIS LATER IN LARGER CONFLICT OVER TOOL USE - HOW TO SET THIS UP?
-
-#### Observations around authenticity in choice of toolset
+The this section outlines the design characteristics of the coding tools in a face-to-face learning environment, namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement.
 
 
-**Resolution**
+#### Addressing complexity of code environment with code playground
 In terms of technical complexity, using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server. While the code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of how they were interlinked.
-
 
 In journal notes and in video data I observed participants developing responses to immediate barriers that the new tool introduced.
 
@@ -821,10 +809,7 @@ In journal notes and in video data I observed participants developing responses 
  -
 <!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
 
-The use of code playgrounds mirrors that of professionals.
-
-
-
+There are similarities and differences between the use of code playgrounds by novices and professionals.
 
 
 
@@ -854,45 +839,6 @@ https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-you
   https://github.com/glitch-game-club/glitch-game-club/blob/master/games
  -->
 
- <!-- NOTE - I am not totally sure it is necessary. Could it be collapsed or presented in another part of this chapter.
- NOTE - Try to summarise exactly what the message is here.  
- NOTE - how can this be more analytical.  -->
-
-
-
-
-### Discussion on Authenticity of Tools
-
-NOTE - Section moved from conclusion.
-
-An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
-
-The design of the starting template shields learners from much of the complexity of the underlying web-technology and provided potential affordances via embodied elements that facilitated learner agency via expression of home interests, play with dynamics and game layout.
-
-The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
-
-These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
-
-While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
-
-#### Discussion on Authenticity within this conflict and playground as resolution
-
-What does authenticity of tools mean in this context and configuration?
-CROSSREF - CALL BACK TO DISCUSSION OF AUTHENTICITY IN LITERATURE REVIEW.
-
-- similar to workplace
-- has a real purpose for Participants
-- can be showcased in public for an external audience
-
-The process of using coding tools is authentic but challenging.
-The creation of a template and mini challenges helped address this.
-
-For example in p1 iteration, code framework is authentic, js. code playground less so aimed at learners, and the process unstrucutred.
-
-While tempting to say that the use of a template is eductional scaffolding and therefore not authentic to a work place setting environment
-
-While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time.
-
 
 
 
@@ -910,6 +856,21 @@ The a game template served to remove technical barriers to getting immediate fee
 
 ### Design choices of the half-baked template
 
+The process of getting started in P1 took too long and from a motivation of an responsive lacked a guiding structure. Introducing a starting template helped participants build from this base and build familiarity with the code. However, the process of adding elements still needed significant support and I decided to work on the following elements to make the process of design by modification easier.
+
+
+
+
+
+#### Addressing barriers with template
+
+The creation of a template and mini challenges helped address the challenge
+
+For example in p1 iteration, code framework is authentic, js. code playground less so aimed at learners, and the process unstrucutred.
+
+While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time.
+
+**more polished**
 At the start of P3 I further adapted a game template used in a Phaser tutorial and other techniques I had encountered in similar resources. Thus, the learning design started to follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011].
 
 In line with this research, I posited that using a starting template would to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices. This approach responds to the feedback from the participant that greater time allocated to hands-on use of tools before making design decisions would be welcome.
@@ -924,6 +885,136 @@ Brief help was available via in-line text code comments allowing for self-direct
 4.x - Example of a Quick start card
 
 The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I created these resources and the corresponding code structures to facilitate a _quick start_, the diversity of experience kept some participants extended periods of time.
+
+
+### Observations on the impact of the half-baked game template
+
+<!-- NOTE SOME OF THIS CAN  -->
+<!-- I kept the process informal and responsive by allowing participants to choose which one they wanted to work on next. The following sections outline different areas and patterns of activity. -->
+
+<!-- COMMENT OF mOZILLA TOD THAT IT WAS GENTLE FACILITATION -->
+
+<!-- - level design and prototyping: use of
+- fluid variable editing effective movement
+- The swapping of assets and more complex work with code syntax
+- development of simple stories to bump personal expression and narrative -->
+
+<!-- NOTE - All longer or shorter chains of actions , becoming operations - WHERE DOES THIS FIT?
+NOTE - Also justify having so emergent results here , delay while accessing help to start 360 recordings
+As the end process is visible in fluid behaviour -->
+
+<!-- These tools align with some key design considerations. [Brennan & Resnick]
+- Well suited to build a repeated design practice.
+- Small changes had big effects.
+- Variable changes needed immediate testing.  
+- Especially with starting documents, -->
+
+<!-- While the design suits repeated design practice as illustrated by the example above, not all pairs or individuals interacted with GDP in such a neat way.
+A later discussion section in this chapter illustrates a more complex interaction with design stages. -->
+
+
+
+<!-- The choice of the starting toolset and mission shapes the balance and profile of initial community activity. -->
+
+<!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
+-->
+
+
+
+#### Design behaviours encouraged through use of game template
+
+
+In this section, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
+
+NOTE - HOW MUCH ON IMPACT? HOW MUCH IN CH5?
+
+
+The following sections are observations on design behaviour  that I encouraged through tool choice and design
+
+####**Variable editing for movement:**
+
+Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code. Following this first change however behaviour varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
+
+####**Level design and prototyping:**
+
+The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
+
+<!-- The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design.  -->
+
+<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
+
+
+####**Use of pixel art to seed narrative and art creativity:**
+
+One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations. As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
+
+![](./Pictures/whale_1.png){width=50%}
+
+<!-- MOVE?
+The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
+
+
+
+#### Observations on design behaviours encouraged through use of game template
+
+While the simple changes to the game dynamics and patterns embedded in the starting template were motivation and enagement, some participants soon began to ask how to make additions to the game. A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning.
+
+At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns mosst closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
+
+Instead analysis of the video data of participants reveals a large number of broader digital literacy skills involved in certain processes. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learnign a complex chain of  these individual actions.
+
+<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
+Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
+
+<!-- While the template has self contained help in the form of text comments Some participant do not pick up all processes, some left behind and need support but that is available. Seeing patterns other peers adopted and creates a reason to ask for help. Peer propagation of patterns explored later. -->
+
+<!-- Perhaps move later after GDP chapter?  -->
+<!-- **Limitation of asset work as a GDP**
+Note the limits of this interpretation
+While the reinterpretation of the MDA framework into a menu of GDP is practical for the elements that they want to change, it is not strictly a pattern to be implemented here.
+tension here to be briefly explored or noted to explore later. -->
+
+<!-- #### Circulation of peers and helpers
+This often facilitates talk aloud of design decisions and justifications.
+Cross reference playtesting -->
+
+<!-- ### Accessing Help and Documentation
+In the emerging community there was a variety of help available including;
+- Written documentation from the learning design via step by step tutorials
+- A series of code examples in working code playgrounds
+- Facilitator help through asking for help
+- Student Helper attention and help
+- Peer support from parents and children -->
+
+<!-- ### Discussion on initial tool use and starting processes
+DEVELOP THIS SECTION -->
+
+<!-- These observations can be explore in relation to other research
+- This research supports claims that half-baked games invite development []
+- This research also supports other research on the attraction (and motivation) of retro, (introduction) on culture and livingstone, sefon-green. -->
+
+
+
+### Discussion on Authenticity of Tools
+
+**observations?**
+
+While tempting to say that the use of a template is educational scaffolding and therefore not authentic to a work place setting environment, the use of starting templates is also a common work place tactic. For example the js libary boostrap comes with starter templates.
+
+Glitch has many such starter templates aimed at professionals trying out a different code language or framework.
+
+**impact?**
+
+An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
+
+The design of the starting template shields learners from much of the complexity of the underlying web-technology and provided potential affordances via embodied elements that facilitated learner agency via expression of home interests, play with dynamics and game layout.
+
+The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
+
+These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
+
+While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
+
 
 
 
@@ -1027,131 +1118,6 @@ My journal notes see an evolution of attempts to try to build into the program, 
 An additional rationale for this process was to help reduce potential internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches explored earlier in our section on germ cell concept Papert and Turkle, 1990). In short, my message was to participants there are more than one way the skin a cat. When you are learning to code follow your own preferences and try to observe and reflect on what works well for you. -->
 
 
-## The impact of the core tools of code playgrounds and templated game
-
-In this section, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
-
-NOTE - HOW MUCH ON IMPACT? HOW MUCH IN CH5?
-
-The this section outlines the design characteristics of the coding tools in a face-to-face learning environment, namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement.
-
-
-<!-- The choice of the starting toolset and mission shapes the balance and profile of initial community activity. -->
-<!-- As explored in the literature review, the concept of a Microworld which embodies target concepts has extensive supporting and descriptive research.  -->
-
-<!-- NOTE - USE MICROWORLD OR NOT AS CONCEPT IN THIS CHAPTER? -->
-
-<!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
--->
-
-
-<!--
-MOVE
-he last chapter outlined the use and design characteristics of the starting point of an incomplete 2D platformer with low-spec graphics, with graphical scaffolding for text-based code, and deliberately broken.
-While the following chapter explores the use of game design patterns in detail, this section addresses the impact of the template on participant coding practices, based on video observations of learners directly interaction with the template triangulated with journal notes from phases 2 and 3 and participant feedback from phase one. -->
-<!-- THIS NEEDS REVISION - USEFUL BUT WHAT FOCUS - DEBUGGING TOOLS? - DESIGN HEURISTICS - LIKE SCRATCH -->
-
-<!-- NOTE - THEME THIS? COMPLEXITY, APPEARANCE, -->
-
-
-
-<!-- NOTE - LINK TO OTHER KINDS OF ERRORS - NEXT CHAPTER -->
-
-
-
-
-### Observations on the impact of the half-baked game template
-
-<!-- NOTE SOME OF THIS CAN  -->
-
-
-
-<!-- I kept the process informal and responsive by allowing participants to choose which one they wanted to work on next. The following sections outline different areas and patterns of activity. -->
-
-<!-- COMMENT OF mOZILLA TOD THAT IT WAS GENTLE FACILITATION -->
-
-<!-- - level design and prototyping: use of
-- fluid variable editing effective movement
-- The swapping of assets and more complex work with code syntax
-- development of simple stories to bump personal expression and narrative -->
-
-<!-- NOTE - All longer or shorter chains of actions , becoming operations - WHERE DOES THIS FIT?
-NOTE - Also justify having so emergent results here , delay while accessing help to start 360 recordings
-As the end process is visible in fluid behaviour -->
-
-<!-- These tools align with some key design considerations. [Brennan & Resnick]
-- Well suited to build a repeated design practice.
-- Small changes had big effects.
-- Variable changes needed immediate testing.  
-- Especially with starting documents, -->
-
-<!-- While the design suits repeated design practice as illustrated by the example above, not all pairs or individuals interacted with GDP in such a neat way.
-A later discussion section in this chapter illustrates a more complex interaction with design stages. -->
-#### Design behaviours encouraged through use of game template
-
-The following sections are observations on design behaviour  that I encouraged through tool choice and design
-
-####**Variable editing for movement:**
-
-
-Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code. Following this first change however behaviour varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
-
-####**Level design and prototyping:**
-
-The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
-
-<!-- The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design.  -->
-
-<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
-
-
-####**Use of pixel art to seed narrative and art creativity:**
-
-One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations. As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
-
-![](./Pictures/whale_1.png){width=50%}
-
-<!-- MOVE?
-The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
-
-#### Observations on design behaviours encouraged through use of game template
-
-While the simple changes to the game dynamics and patterns embedded in the starting template were motivation and enagement, some participants soon began to ask how to make additions to the game. A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning.
-
-At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns mosst closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
-
-Instead analysis of the video data of participants reveals a large number of broader digital literacy skills involved in certain processes. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learnign a complex chain of  these individual actions.
-
-<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
-Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
-
-<!-- While the template has self contained help in the form of text comments Some participant do not pick up all processes, some left behind and need support but that is available. Seeing patterns other peers adopted and creates a reason to ask for help. Peer propagation of patterns explored later. -->
-
-<!-- Perhaps move later after GDP chapter?  -->
-<!-- **Limitation of asset work as a GDP**
-Note the limits of this interpretation
-While the reinterpretation of the MDA framework into a menu of GDP is practical for the elements that they want to change, it is not strictly a pattern to be implemented here.
-tension here to be briefly explored or noted to explore later. -->
-
-<!-- #### Circulation of peers and helpers
-This often facilitates talk aloud of design decisions and justifications.
-Cross reference playtesting -->
-
-<!-- ### Accessing Help and Documentation
-In the emerging community there was a variety of help available including;
-- Written documentation from the learning design via step by step tutorials
-- A series of code examples in working code playgrounds
-- Facilitator help through asking for help
-- Student Helper attention and help
-- Peer support from parents and children -->
-
-<!-- ### Discussion on initial tool use and starting processes
-DEVELOP THIS SECTION -->
-
-<!-- These observations can be explore in relation to other research
-- This research supports claims that half-baked games invite development []
-- This research also supports other research on the attraction (and motivation) of retro, (introduction) on culture and livingstone, sefon-green. -->
-
 
 ## Conclusion
 
@@ -1199,6 +1165,21 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 
 
 ### Analysis in relation to existing research on related design toolsets
+
+**Other tools and authenticity of Microworld**
+
+Research on other toolsets is instructive on this tension.
+
+The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
+
+While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
+
+- Why not Scratch
+- Choice of Thimble initially
+- lack of mature community
+
+
+
 
 
 #### Comparing design to Scratch and Microworlds
