table for learning dimensions

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -530,9 +530,7 @@ I also adapted and advanced resources with an aim that they could be used within
 
 In 2019 MakeCode Arcade was launched to make games using a shared authoring system to Microbit controller. As that systems was designed to be easy to use by novices
 
-I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P2 [^2].
-
-
+I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P2 [^2]. I have included short analysis of the tool and those resources in this book chapter [@chesterman_game_2023].
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
@@ -592,10 +590,7 @@ The freedom of choice and imagination allowed by designing on paper and via pixe
 
 ## 2. Facilitator conflict addressing the Play Paradox
 
-NOTE - MOVE THIS TO TWO? OR TO ONE? SO END WITH TWO WHICH CREATES A TRANSITION TO THE NEXT CHAPTER EFFECTIVELY.
-
 This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents that teachers may want students to find [@hoyles_pedagogy_1992].
-
 
 I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom.
 
@@ -603,12 +598,9 @@ This conflict provoked me to create resources which could serve to pull particip
 
 SIGNPOSTING WHY THIS SECTION IS USEFUL HERE
 
-
 <!-- stylised in a way that mirrored a map used for navigation in a quest-themed computer game.
 
 As learners traced a trail between the different island/missions they had visited, the map provoked learners to reflect on their journey and progress. However, this approach may be too labour and time intensive for many class environments.
-
-
 -->
 
 
@@ -616,24 +608,17 @@ As learners traced a trail between the different island/missions they had visite
 
 I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
 
-
-
 ![learning islands](./Pictures/navigational_paper_map.png)
 ![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png)
 _Missions as Islands_
 
-REPLACE WITH 360 OF MAPS
-
 My motivations for this intervention were that it encourage a sense of community and peer learning that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with.
-
 
 **Minimal evidence in this study**
 
 The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions and present patterns to encourage learners to start with ones that involve simple code changes but return a large change in terms of gameplay experience.
 
 Despite minimal evidence due to a factor later explored, there were some observations.
-
-
 
 | **Transcript**| **Description**|
 |----------------|------------------|
@@ -706,22 +691,21 @@ _Map of Learning Dimensions of the 3M Game Making Approach_
  - (see Eriksson and Bjork)
  - Draw on material and critique in chapter on semantic profiles / waves. -->
 
-#### NOTES ON TENSIONS WHICH THIS LEARNING MAP HAS POTENTIAL TO ADDRESS
+#### Observations on tensions which the learning and navigational maps have potential to address.
 
-THIS SECTIONS NEEDS DEVELOPMENT
-
-**Teacher stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.**-  
-Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators
-
-**Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning.**
-A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.
+While this element of the learning design is beyond the main remit of this study, as explored below, the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following table aims to summarise the alignment of the potential of this work with other research.
 
 
-**tension adapting resources to a curriculum environment**
-There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map.
-<!-- .  WHERE TO PUT EXAMPLE? of design pattern current -->
+| **Tension identified**| **Commentary**|
+|----------------|------------------|
+|Teacher stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.  | Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators|
+|  Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.  |   |
+|  Challenges adapting resources to a curriculum environment |  There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map. |   
+|Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related missions were designed. (If so not clearly tested) Challenge section in particular mirrors systems concepts.
 
-In addition, material which mapped and explained learning dimensions including design skills and computational concepts were included in the participant support resources.
+Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context |   
+
+
 
 **Addition of a Game Challenge section**
 
@@ -733,11 +717,7 @@ I created such missions (outlined in Methods chapter)
 Added game design patterns based on challenge - find source Schnell & GSM literature (their terminology is Game elements)
 And then updated the learning map to highlight potential concepts to be learned.
 
-**Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.**
 
-Systems related missions were designed. (If so not clearly tested) Challenge section in particular mirrors systems concepts.
-
-Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context
 
 
 
